refactor: index.css

--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
 @tailwind utilities;
 
 html {
-  font-family: "Inter", sans-serif;
+  font-family: Inter, sans-serif;
 }
 
 @supports (font-variation-settings: normal) {
@@ -65,27 +65,29 @@ html {
 }
 
 .glassmorphism {
-  background: rgba(255, 255, 255, 0.25);
-  box-shadow: 0 2px 30px 0 rgba(31, 38, 135, 0.07);
+  background: rgb(255 255 255 / 25%);
+  border: 1px solid rgb(255 255 255 / 18%);
+  box-shadow: 0 2px 30px 0 rgb(31 38 135 / 7%);
   backdrop-filter: blur(4px);
-  -webkit-backdrop-filter: blur(4px);
-  border: 1px solid rgba(255, 255, 255, 0.18);
+
+  /* -webkit-backdrop-filter: blur(4px); */
 }
 
 input[type="file"] {
-  z-index: -1;
   position: absolute;
+  z-index: -1;
   opacity: 0;
 }
 
 .sketch-picker {
   width: 170px !important;
-  background: rgba(255, 255, 255, 0.25) !important;
-  box-shadow: 0 2px 30px 0 rgba(31, 38, 135, 0.07) !important;
-  backdrop-filter: blur(4px) !important;
-  -webkit-backdrop-filter: blur(4px) !important;
-  border: 1px solid rgba(255, 255, 255, 0.18) !important;
+  background: rgb(255 255 255 / 25%) !important;
+  border: 1px solid rgb(255 255 255 / 18%) !important;
   border-radius: 6px !important;
+  box-shadow: 0 2px 30px 0 rgb(31 38 135 / 7%) !important;
+  backdrop-filter: blur(4px) !important;
+
+  /* -webkit-backdrop-filter: blur(4px) !important; */
 }
 
 .sketch-picker > div:nth-child(3) {
